# autoclicker

./: README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActionCard.jsx
src/utils/: interval.js
