[package]
name = "autoclicker"
version = "0.1.0"
description = "Windows automation tool"
authors = ["you"]
edition = "2021"

[lib]
name = "autoclicker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"

